--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "contentful-json-table",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "devDependencies": {
-    "@babel/core": "7.3.4",
+    "@babel/core": "^7.13.1",
     "@babel/plugin-proposal-class-properties": "7.3.4",
     "@babel/plugin-transform-runtime": "7.3.4",
     "@babel/preset-env": "7.3.4",
@@ -11,13 +11,13 @@
     "@contentful/eslint-config-extension": "0.2.0",
     "@testing-library/react": "8.0.4",
     "@types/jest": "24.0.15",
-    "@types/react": "^16.8.17",
-    "@types/react-dom": "^16.8.4",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "@types/webpack-env": "1.13.9",
     "babel-plugin-module-resolver": "^3.2.0",
-    "contentful-cli": "0.33.2",
+    "contentful-cli": "^1.5.32",
     "cssnano": "4.1.10",
-    "eslint": "^6.0.1",
+    "eslint": "^6.8.0",
     "typescript": "3.5.2"
   },
   "scripts": {
@@ -33,16 +33,16 @@
     "help": "contentful-extension-scripts help"
   },
   "dependencies": {
-    "@contentful/forma-36-fcss": "^0.0.20",
-    "@contentful/forma-36-react-components": "^3.11.3",
-    "@contentful/forma-36-tokens": "^0.3.0",
-    "codemirror": "^5.49.2",
-    "contentful-ui-extensions-sdk": "3.9.0",
-    "jsonlint-mod": "^1.7.5",
+    "@contentful/forma-36-fcss": "^0.3.1",
+    "@contentful/forma-36-react-components": "^3.80.1",
+    "@contentful/forma-36-tokens": "^0.10.1",
+    "codemirror": "^5.59.3",
+    "contentful-ui-extensions-sdk": "^3.32.1",
+    "jsonlint-mod": "^1.7.6",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.14.0",
     "react-codemirror2": "^6.0.0",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.14.0"
   },
   "browserslist": [
     "last 5 Chrome version",
